[gd_scene load_steps=14 format=3 uid="uid://fw5km3o2r563"]

[ext_resource type="Texture2D" uid="uid://0sfy2gs22wmh" path="res://FknQrN.png" id="1_56kus"]
[ext_resource type="Script" uid="uid://cnss3slpv8cy4" path="res://scripts/new_password_scene.gd" id="1_fpnbq"]
[ext_resource type="FontFile" uid="uid://4ivejuabvoq3" path="res://Game Bubble.ttf" id="2_fpnbq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r5buc"]
texture = ExtResource("1_56kus")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c5k0r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0npb"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7egp4"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sh5qy"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ap15e"]
bg_color = Color(0.65834, 0.65834, 0.65834, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ftrry"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l18wr"]
bg_color = Color(0.20871, 0.20871, 0.20871, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ofgj"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_by7p2"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="NewPasswordScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fpnbq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.31
anchor_top = 0.394
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -357.12
offset_top = -255.312
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_r5buc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.5
offset_top = -148.0
offset_right = 210.5
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Explanation text" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Įrašykite naują slaptažodį"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Slaptažodis"

[node name="PasswordInput2" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Pakartoti slaptažodį"

[node name="change password button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_c5k0r")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_r0npb")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_7egp4")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_sh5qy")
theme_override_styles/hover = SubResource("StyleBoxFlat_ap15e")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_ftrry")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l18wr")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_4ofgj")
theme_override_styles/normal = SubResource("StyleBoxFlat_by7p2")
text = "Pakeisti slaptažodį
"

[node name="exit button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_c5k0r")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_r0npb")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_7egp4")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_sh5qy")
theme_override_styles/hover = SubResource("StyleBoxFlat_ap15e")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_ftrry")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l18wr")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_4ofgj")
theme_override_styles/normal = SubResource("StyleBoxFlat_by7p2")
text = "Atgal
"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.5
offset_top = -247.0
offset_right = 233.5
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_fpnbq")
theme_override_font_sizes/font_size = 60
text = "CogniGame"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/change password button" to="." method="_on_change_password_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exit button" to="." method="_on_exit_button_pressed"]
